[package]
name = "avanza-rs"
description = "A Rust API client for Avanza"
version = "0.1.3"
edition = "2021"
license-file = "LICENSE.txt"
repository = "https://github.com/feelixe/avanza-rs"

[lib]
name = "avanza_rs"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
otpauth = "0.4.1"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
surf = "2.3.2"
tokio = { version = "1.29.1", features = ["rt", "macros"] }
url = "2.4.0"
